Sync all content

--- a/content/resources/final_874_2004.md
+++ b/content/resources/final_874_2004.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-874-quantitative-research-methods-multivariate-spring-2004/9da679afb70cacf7a0f7157a53dfce56_final_874_2004.pdf
 file_type: application/pdf
+parent_uid: 655ed24f-fdf3-18f8-8650-00f59ddd512a
 resourcetype: Document
 title: final_874_2004.pdf
 uid: 9da679af-b70c-acf7-a0f7-157a53dfce56
