--- a/content/resources/ps1_874_2004.md
+++ b/content/resources/ps1_874_2004.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-874-quantitative-research-methods-multivariate-spring-2004/269334b77c2d4696c021813561e55d84_ps1_874_2004.pdf
 file_type: application/pdf
+parent_uid: 2243e45e-1397-db6a-4bda-eb5f8d3c0bca
 resourcetype: Document
 title: ps1_874_2004.pdf
 uid: 269334b7-7c2d-4696-c021-813561e55d84
