--- a/content/resources/ps2_874_2004.md
+++ b/content/resources/ps2_874_2004.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-874-quantitative-research-methods-multivariate-spring-2004/e030ef87098e3274d00dafe15624e004_ps2_874_2004.pdf
 file_type: application/pdf
+parent_uid: 2243e45e-1397-db6a-4bda-eb5f8d3c0bca
 resourcetype: Document
 title: ps2_874_2004.pdf
 uid: e030ef87-098e-3274-d00d-afe15624e004
