--- a/content/resources/ps3_874_2004.md
+++ b/content/resources/ps3_874_2004.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-874-quantitative-research-methods-multivariate-spring-2004/8b13496c068da50b887f22bdb040bf53_ps3_874_2004.pdf
 file_type: application/pdf
+parent_uid: 2243e45e-1397-db6a-4bda-eb5f8d3c0bca
 resourcetype: Document
 title: ps3_874_2004.pdf
 uid: 8b13496c-068d-a50b-887f-22bdb040bf53
