--- a/content/resources/ps4_874_2004.md
+++ b/content/resources/ps4_874_2004.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-874-quantitative-research-methods-multivariate-spring-2004/9e666bc38d6a4f686241639d7bdcf99e_ps4_874_2004.pdf
 file_type: application/pdf
+parent_uid: 2243e45e-1397-db6a-4bda-eb5f8d3c0bca
 resourcetype: Document
 title: ps4_874_2004.pdf
 uid: 9e666bc3-8d6a-4f68-6241-639d7bdcf99e
