--- a/content/resources/ps6_874_2004.md
+++ b/content/resources/ps6_874_2004.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-874-quantitative-research-methods-multivariate-spring-2004/c3c213d835f50acb8424fb1f7d17d4ad_ps6_874_2004.pdf
 file_type: application/pdf
+parent_uid: 2243e45e-1397-db6a-4bda-eb5f8d3c0bca
 resourcetype: Document
 title: ps6_874_2004.pdf
 uid: c3c213d8-35f5-0acb-8424-fb1f7d17d4ad
