--- a/content/resources/ps7_874_2004.md
+++ b/content/resources/ps7_874_2004.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-874-quantitative-research-methods-multivariate-spring-2004/155c545a84126ab6ad5f167c27d47d52_ps7_874_2004.pdf
 file_type: application/pdf
+parent_uid: 2243e45e-1397-db6a-4bda-eb5f8d3c0bca
 resourcetype: Document
 title: ps7_874_2004.pdf
 uid: 155c545a-8412-6ab6-ad5f-167c27d47d52
