--- a/content/resources/ps9_874_2004.md
+++ b/content/resources/ps9_874_2004.md
@@ -3,6 +3,7 @@ content_type: resource
 description: ''
 file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/17-874-quantitative-research-methods-multivariate-spring-2004/95e3d1d64e77204c57fe8a1f2159e61e_ps9_874_2004.pdf
 file_type: application/pdf
+parent_uid: 2243e45e-1397-db6a-4bda-eb5f8d3c0bca
 resourcetype: Document
 title: ps9_874_2004.pdf
 uid: 95e3d1d6-4e77-204c-57fe-8a1f2159e61e
